chart/templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app
  labels:
    app: auth-app
spec:
  selector:
    app: auth-app
  ports:
    - name: web
      port: 80
      targetPort: 8080
  type: ClusterIP
